[package]
name = "dvote_wasm"
version = "0.1.0"
authors = ["Jør∂¡ <itsbrickpop@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.59"
hex = "0.4.2"
base64 = "0.12.0"
poseidon-rs = { git = "https://github.com/arnaucube/poseidon-rs#4cba42e" }
# za-prover = { git = "https://github.com/adria0/za#e3634a3" }

